# aperture

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: renovate.json
aperture/: Cargo.toml
aperture-core/: Cargo.toml
aperture-core/src/: lib.rs
aperture-http/: Cargo.toml
aperture-http/docs/: openapi.yaml
aperture-http/examples/: serve.rs
aperture-http/src/: api.rs  lib.rs  spectra.rs
aperture-http/src/api/: v1.rs
aperture-http/src/spectra/: oci.rs
aperture-rpc/: Cargo.toml
aperture-rpc/src/: lib.rs
aperture-storage/: Cargo.toml
aperture-storage/src/: lib.rs
aperture/src/: lib.rs
