[package]
name = "aperture"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aperture-rpc = { workspace = true }
facet = { workspace = true }
facet-args = { workspace = true }
miette = { workspace = true }
